--- a/src/css/appointmentlist.component.css
+++ b/src/css/appointmentlist.component.css
@@ -2,4 +2,7 @@
   height: calc(100% - 100px);
   overflow-y: scroll; }
 
+.deselected {
+  opacity: 0.5; }
+
 /*# sourceMappingURL=appointmentlist.component.css.map */
