--- a/src/css/components.css
+++ b/src/css/components.css
@@ -8,11 +8,12 @@
   top: 0;
   left: 0;
   right: 0;
-  bottom: 0;
-  z-index: 1337;
+  height: 100vh;
+  z-index: 1339;
   cursor: pointer; }
   .dialog-cover .popup-dialog {
     cursor: default;
+    max-height: 100vh;
     -webkit-transition: all 500ms ease;
     -moz-transition: all 500ms ease;
     -ms-transition: all 500ms ease;
