--- a/src/css/front.component.css
+++ b/src/css/front.component.css
@@ -46,18 +46,6 @@
     -ms-transition: opacity 300ms ease;
     -o-transition: opacity 300ms ease;
     transition: opacity 300ms ease; }
-    .picture .edit-filter .file-input {
-      height: 100%;
-      width: 100%;
-      position: absolute;
-      top: 0;
-      right: 0;
-      z-index: 1337;
-      font-size: 50px;
-      cursor: pointer;
-      opacity: 0;
-      -moz-opacity: 0;
-      filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0); }
 
 .picture-sm {
   width: 40px;
@@ -70,6 +58,19 @@
 .picture-lg {
   width: 150px;
   height: 150px; }
+
+.file-input {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 1337;
+  font-size: 50px;
+  cursor: pointer;
+  opacity: 0;
+  -moz-opacity: 0;
+  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0); }
 
 .profile-section {
   position: fixed;
