--- a/src/css/smoothalert.component.css
+++ b/src/css/smoothalert.component.css
@@ -9,7 +9,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  z-index: 1337;
+  z-index: 1339;
   cursor: pointer; }
 
 .smooth-dialog {
@@ -18,24 +18,22 @@
   border-radius: 5px;
   cursor: default; }
 
-.collapse {
-  display: none; }
+.bounce {
+  animation: bounce 700ms; }
 
-.collapse.in {
-  display: block; }
-
-.collapsing {
-  position: relative;
-  height: 0;
-  overflow: hidden;
-  -webkit-transition-timing-function: ease;
-  -o-transition-timing-function: ease;
-  transition-timing-function: ease;
-  -webkit-transition-duration: .35s;
-  -o-transition-duration: .35s;
-  transition-duration: .35s;
-  -webkit-transition-property: height, visibility;
-  -o-transition-property: height, visibility;
-  transition-property: height, visibility; }
+@keyframes bounce {
+  0% {
+    transform: scale(0.1);
+    opacity: 0; }
+  30% {
+    transform: scale(1.3);
+    opacity: .7; }
+  60% {
+    transform: scale(1);
+    opacity: 1; }
+  70% {
+    transform: scale(1); }
+  100% {
+    transform: scale(1); } }
 
 /*# sourceMappingURL=smoothalert.component.css.map */
