--- a/src/lib/components/smoothAlert/smoothalert.component.html
+++ b/src/lib/components/smoothAlert/smoothalert.component.html
@@ -1,30 +1,28 @@
 <div *ngIf="collapse" class="smooth-cover row row-center row-center-v cover-6 cover-black">
-    <div class="smooth-dialog">
-        <div class="row row-center p-l-20-20 p-top fs-30"
-             [ngClass] = "{
+  <div class="smooth-dialog bounce">
+    <div class="row row-center p-l-20-20 p-top fs-30"
+         [ngClass]="{
                   'color-primary': checkType('error'),
                   'color-green': checkType('success'),
                   'color-blue': checkType('warning')}">
             <span class="fa fs-40"
-                  [ngClass] = "{
+                  [ngClass]="{
                   'fa-times-circle': checkType('error'),
                   'fa-check-circle': checkType('success'),
                   'fa-exclamation-circle': checkType('warning')}"></span>
-        </div>
-        <div class="row row-center p-l-20-40 p-bottom color-dark t-center">
-            <p class="fs-16 t-300">
-                {{ alertText }}
-            </p>
-        </div>
-        <div class="row row-center p-l-40-20 p-bottom fs-16 color-dark">
-            <button class="btn-lg btn-round"
-                    (click)="buttonClick('alert')"
-                    [ngClass] = "{
-                      'btn-primary': checkType('error'),
-                      'btn-green': checkType('success'),
-                      'btn-blue': checkType('warning')}">
-                Lukk
-            </button>
-        </div>
     </div>
+    <div class="row row-center p-l-20-40 p-bottom color-dark t-center">
+      <h3>{{options.title}}</h3>
+      <p class="fs-14 t-300 w-100-p">{{ options.text }}</p>
+    </div>
+    <div class="row row-center p-l-40-20 p-bottom fs-16 color-dark">
+      <button *ngIf="options.showDecline" (click)="declineClick()" class="btn-lg btn-primary btn-round m-l-0-10">
+        {{options.declineText}}
+      </button>
+      <button *ngIf="options.showAccept" class="btn-lg btn-green btn-round m-l-0-10"
+              (click)="buttonClick(options.data)">
+        {{options.acceptText}}
+      </button>
+    </div>
+  </div>
 </div>
