--- a/src/lib/components/smoothAlert/smoothalert.component.scss
+++ b/src/lib/components/smoothAlert/smoothalert.component.scss
@@ -3,7 +3,7 @@
 .smooth-cover {
   position: fixed;
   top: 0; left: 0; right: 0; bottom: 0;
-  z-index: 1337;
+  z-index: 1339;
 
   cursor: pointer;
 }
@@ -17,25 +17,14 @@
   cursor: default;
 }
 
-.collapse {
-  display: none;
+// Animation
+
+.bounce {
+  animation: bounce 700ms;
 }
 
-.collapse.in {
-  display: block;
-}
-
-.collapsing {
-  position: relative;
-  height: 0;
-  overflow: hidden;
-  -webkit-transition-timing-function: ease;
-  -o-transition-timing-function: ease;
-  transition-timing-function: ease;
-  -webkit-transition-duration: .35s;
-  -o-transition-duration: .35s;
-  transition-duration: .35s;
-  -webkit-transition-property: height, visibility;
-  -o-transition-property: height, visibility;
-  transition-property: height, visibility;
+@keyframes bounce {
+  0% { transform: scale(0.1); opacity: 0 }
+  30% { transform: scale(1.3); opacity: .7; }
+  60% { transform: scale(1); opacity: 1 }
 }
