--- a/src/lib/scss/components.scss
+++ b/src/lib/scss/components.scss
@@ -2,12 +2,14 @@
 
 .dialog-cover {
   position: fixed;
-  top: 0; left: 0; right: 0; bottom: 0;
-  z-index: 1337;
+  top: 0; left: 0; right: 0;
+  height: 100vh;
+  z-index: 1339;
   cursor: pointer;
 
   .popup-dialog {
     cursor: default;
+    max-height: 100vh;
 
     @include trans(all, 500ms);
   }
