--- a/src/pages/front/job/job.component.html
+++ b/src/pages/front/job/job.component.html
@@ -1,13 +1,21 @@
 <div *ngIf="job && author">
   <div class="row row-center-v row-center cover-6 cover-black h-600 bg-image border-b-1 border-stable"
        [ngStyle]="{'background-image':'url(' + baseUrl + job.picture + ')'}">
-    <div class="cover-content">
+    <div class="cover-content t-center">
       <h1 class="color-light t-upper t-center">{{job.title}}</h1>
+      <button *ngIf="checkOwner()" (click)="toggle('edit')" class="btn-lg btn-green btn-round fs-14 m-l-0-20">
+        <span class="fa fa-pencil-square-o m-l-0-10 m-right"></span>
+        <span>Endre jobben</span>
+      </button>
+      <button *ngIf="!job.is_published && checkOwner()" (click)="publish()" class="btn-lg btn-green btn-round fs-14 m-l-0-20">
+        <span class="fa fa-share m-l-0-10 m-right"></span>
+        <span>Legg ut jobben</span>
+      </button>
       <div class="row row-center row-center-v color-light fs-18 p-l-20-0">
 
         <!-- Address-->
         <span class="fa fa-map-marker fs-16 m-l-0-10"></span>
-        <span>Skansegata 2a</span>
+        <span>{{job.street_address}}</span>
         <span class="w-40"></span>
 
         <!-- Duration -->
@@ -35,14 +43,14 @@
       </div>
     </div>
   </div>
-  <div class="row row-center p-l-40-20 bg-stable-light border-b-1 border-stable">
+  <div (click)="toggle('userInfo')" class="row row-center p-l-40-20 bg-stable-light hover-stable-light border-b-1 border-stable">
     <div class="c-l-10">
       <div class="row row-center-v">
         <div class="picture picture-lg border-4 border-dark"
              [ngStyle]="{'background-image':'url(' + baseUrl + author.profile_picture + ')'}"></div>
         <div class="p-l-20-40">
           <h3 class="m-l-0-0">{{author.first_name}} {{author.last_name}}</h3>
-          <p class="m-l-0-0 fs-16">Lorem ipsum</p>
+          <p class="m-l-0-0 fs-16">Trykk for å se mer</p>
         </div>
       </div>
     </div>
@@ -57,7 +65,7 @@
         <div class="c-l-4 t-center fs-20 color-stable-dark p-l-40-0 p-top">
           <div class="p-l-40-0 p-bottom">
             <span class="fa fa-map-marker color-primary fs-20 m-l-0-10"></span>
-            <p>Skansegata 2a</p>
+            <p>{{job.street_address}}</p>
           </div>
           <div class="p-l-40-0">
             <span class="fa fa-clock-o color-primary fs-20 m-l-0-10"></span>
@@ -71,11 +79,15 @@
       </div>
     </div>
   </div>
+  <div class="row h-600">
+    <korde-map class="w-100-p" *ngIf="mapOptions && mapMarkers" [options]="mapOptions" [markers]="mapMarkers"></korde-map>
+  </div>
 </div>
 
+<!-- Request appointment -->
 <div *ngIf="show.appointment" (click)="toggle('appointment')"
-     class="dialog-cover row row-center row-center-v cover-6 cover-black">
-  <div (click)="$event.stopPropagation()" class="popup-dialog w-600 bg-light p-l-20-20 rounded-5">
+     class="dialog-cover row row-center row-center-v cover-6 cover-black p-l-20-20">
+  <div (click)="$event.stopPropagation()" class="popup-dialog w-600 bg-light p-l-20-20 rounded-5 overflow-scroll">
     <div class="row p-l-5-0">
       <div class="c-l-12 t-center">
         <h4 class="t-upper t-300 color-stable-dark">Dato</h4>
@@ -109,3 +121,57 @@
     </form>
   </div>
 </div>
+
+
+<!-- Edit job -->
+<div *ngIf="show.edit" (click)="toggle('edit')"
+     class="dialog-cover row row-center row-center-v cover-6 cover-black p-l-20-20">
+  <div (click)="$event.stopPropagation()" class="popup-dialog w-600 bg-light p-l-20-20 rounded-5 overflow-scroll">
+    <div class="row row-center-v h-300 bg-image cover-6 cover-black" [ng-file-drop]="options"
+         [ngStyle]="{'background-image':'url(' + baseUrl + job.picture + ')'}">
+      <div class="c-l-12 cover-content t-center">
+        <button class="btn-lg btn-border-light rounded-5 fs-14">
+          <span class="fa fa-picture-o m-l-0-10 m-right"></span>
+          <input class="file-input" type="file" [ng-file-select]="options" (onUpload)="handleDropUpload($event)">
+          <span>Endre bilde</span>
+        </button>
+      </div>
+    </div>
+    <form (ngSubmit)="updateJob()">
+      <input [(ngModel)]="job.title" type="text" class="input input-bottom-stable-dark fs-30">
+      <textarea [(ngModel)]="job.description" class="textarea input-bottom-stable-dark fs-14 h-300"></textarea>
+      <div class="row fs-14">
+        <div class="c-l-5">
+          <input [(ngModel)]="job.street_address" type="text" class="input input-bottom-stable-dark h-60" placeholder="Adresse">
+        </div>
+        <div class="c-l-4">
+          <input [(ngModel)]="job.city" type="text" class="input input-bottom-stable-dark h-60" placeholder="By">
+        </div>
+        <div class="c-l-3">
+          <input [(ngModel)]="job.postal_code" type="text" class="input input-bottom-stable-dark h-60" placeholder="Postnr.">
+        </div>
+      </div>
+      <div class="t-right">
+        <button class="btn-md btn-green rounded-5 fs-14 m-l-20-0">Oppdater jobben</button>
+      </div>
+    </form>
+  </div>
+</div>
+
+<!--
+  ========================================
+    DIRECTIVES
+  ========================================
+-->
+
+<!-- User info -->
+<div *ngIf="show.userInfo" (click)="toggle('userInfo')"
+     class="dialog-cover row row-center row-center-v cover-6 cover-light p-l-20-20">
+  <user-info *ngIf="author" [user]="author"></user-info>
+</div>
+
+<!-- SMOOTH ALERT -->
+<smooth-alert [collapse]="show.alert"
+              [options]="alertOptions"
+              (onButtonClick)="toggle('alert')">
+</smooth-alert>
