--- a/src/pages/front/login/login.component.html
+++ b/src/pages/front/login/login.component.html
@@ -33,7 +33,6 @@
 
 <!-- SMOOTH ALERT -->
 <smooth-alert [collapse]="show.alert"
-              [alertType]="alertType"
-              [alertText]="alertText"
-              (onButtonClick)="toggle($event)">
+              [options]="alertOptions"
+              (onButtonClick)="toggle('alert')">
 </smooth-alert>
