--- a/src/pages/front/myjobs/myjobs.component.html
+++ b/src/pages/front/myjobs/myjobs.component.html
@@ -1,5 +1,5 @@
 <div class="row view-height">
-  <div class="w-500 view-height bg-light center-shadow border-r-1 border-stable">
+  <div class="w-500 view-height bg-light center-shadow border-r-1 border-stable overflow-scroll">
     <div class="row row-center-v row-center h-100 border-b-1 border-stable">
       <h4>Mine jobber</h4>
     </div>
