--- a/src/pages/front/post/post.component.html
+++ b/src/pages/front/post/post.component.html
@@ -2,7 +2,7 @@
   <form [ngFormModel]="jobForm" (ngSubmit)="postJob()">
     <div *ngIf="checkStep(0)" class="w-700">
       <h4>Hva trenger du hjelp med?</h4>
-      <input ngControl="title" [(ngModel)]="newJob.title" type="text" class="input h-60"
+      <input (keypress)="checkEnterPress($event, [title])" ngControl="title" [(ngModel)]="newJob.title" type="text" class="input h-60"
              placeholder="Skriv inn en passende tittel" #title="ngForm">
       <div class="m-l-10-0 t-right">
         <button (click)="next()" [disabled]="!title.valid" type="button" class="btn-lg btn-primary">Neste</button>
@@ -10,7 +10,7 @@
     </div>
     <div *ngIf="checkStep(1)" class="w-700">
       <h4>Beskriv jobben litt nærmere</h4>
-            <textarea ngControl="description" [(ngModel)]="newJob.description" class="textarea h-300"
+            <textarea (keypress)="checkEnterPress($event, [description])" ngControl="description" [(ngModel)]="newJob.description" class="textarea h-300"
                       placeholder="Skriv en kort beskrivelse" #description="ngForm"></textarea>
       <div class="m-l-10-0 t-right">
         <button (click)="next()" [disabled]="!description.valid" type="button" class="btn-lg btn-primary">Neste</button>
@@ -28,7 +28,7 @@
         </div>
         <div class="p-l-10-10 w-200 t-center m-l-10-10">
           <p class="m-l-10-0">Omtrent</p>
-          <input ngControl="duration" [(ngModel)]="newJob.duration" type="number" class="input h-50 t-center"
+          <input (keypress)="checkEnterPress($event, [duration])" ngControl="duration" [(ngModel)]="newJob.duration" type="number" class="input h-50 t-center"
                  #duration="ngForm">
           <p class="m-l-10-0">timer</p>
         </div>
@@ -50,7 +50,7 @@
           <input ngControl="city" [(ngModel)]="newJob.city" class="input h-60" placeholder="By" #city="ngForm">
         </div>
         <div class="c-m-3">
-          <input ngControl="postal_code" [(ngModel)]="newJob.postal_code" class="input h-60" placeholder="Postnr." #postal_code="ngForm">
+          <input (keypress)="checkEnterPress($event, [street_address, city, postal_code])" ngControl="postal_code" [(ngModel)]="newJob.postal_code" class="input h-60" placeholder="Postnr." #postal_code="ngForm">
         </div>
       </div>
       <div class="m-l-10-0 t-right">
@@ -81,3 +81,5 @@
     </ul>
   </div>
 </div>
+
+<time-loader [collapse]="isLoading"></time-loader>
