--- a/src/css/components.css
+++ b/src/css/components.css
@@ -10,14 +10,27 @@
   right: 0;
   height: 100vh;
   z-index: 1339;
-  cursor: pointer; }
+  cursor: pointer;
+  animation: fade-in 500ms; }
   .dialog-cover .popup-dialog {
     cursor: default;
     max-height: 100vh;
+    animation: bounce 700ms;
     -webkit-transition: all 500ms ease;
     -moz-transition: all 500ms ease;
     -ms-transition: all 500ms ease;
     -o-transition: all 500ms ease;
     transition: all 500ms ease; }
+
+@keyframes bounce {
+  0% {
+    transform: scale(0.1);
+    opacity: 0; }
+  30% {
+    transform: scale(1.3);
+    opacity: .7; }
+  60% {
+    transform: scale(1);
+    opacity: 1; } }
 
 /*# sourceMappingURL=components.css.map */
