--- a/src/lib/scss/components.scss
+++ b/src/lib/scss/components.scss
@@ -6,11 +6,20 @@
   height: 100vh;
   z-index: 1339;
   cursor: pointer;
+  animation: fade-in 500ms;
 
   .popup-dialog {
     cursor: default;
     max-height: 100vh;
 
+    animation: bounce 700ms;
+
     @include trans(all, 500ms);
   }
+}
+
+@keyframes bounce {
+  0% { transform: scale(0.1); opacity: 0 }
+  30% { transform: scale(1.3); opacity: .7; }
+  60% { transform: scale(1); opacity: 1 }
 }
