--- a/src/pages/front/job/job.component.html
+++ b/src/pages/front/job/job.component.html
@@ -39,7 +39,10 @@
           interesse
         </button>
         <p class="color-stable-dark">eller</p>
-        <button class="btn-md btn-blue rounded-5 w-100-p m-l-10-0">Del jobben</button>
+        <button class="btn-md btn-blue rounded-5 w-100-p m-l-10-0">
+          <span class="fa fa-share-alt m-l-0-10"></span>
+          <span>Del jobben</span>
+        </button>
       </div>
     </div>
   </div>
@@ -87,41 +90,8 @@
 <!-- Request appointment -->
 <div *ngIf="show.appointment" (click)="toggle('appointment')"
      class="dialog-cover row row-center row-center-v cover-6 cover-black p-l-20-20">
-  <div (click)="$event.stopPropagation()" class="popup-dialog w-600 bg-light p-l-20-20 rounded-5 overflow-scroll">
-    <div class="row p-l-5-0">
-      <div class="c-l-12 t-center">
-        <h4 class="t-upper t-300 color-stable-dark">Dato</h4>
-      </div>
-    </div>
-    <datepicker class="color-dark h-400" [date]="soknadsfrist"
-                (valueChange)="dateChanged($event)" [height]="350"></datepicker>
-    <form [ngFormModel]="timeForm" (ngSubmit)="createAppointment()">
-      <div class="row p-l-40-20 p-top">
-        <div class="c-l-12 t-center">
-          <h4 class="t-upper t-300 color-stable-dark">Klokkeslett</h4>
-        </div>
-        <div class="c-l-3 color-light p-l-10-0 fs-12">
-          <select ngControl="hour" [(ngModel)]="newHour" class="select bg-blue rounded-5" #hour="ngForm">
-            <option value="-1" disabled selected>Time</option>
-            <option *ngFor="let hour of hours" value="{{hour}}">{{hour}}</option>
-          </select>
-        </div>
-        <div class="c-l-3 color-light p-l-10-5 fs-12">
-          <select ngControl="minute" [(ngModel)]="newMin" class="select bg-blue rounded-5 t-center"
-                  #minute="ngForm">
-            <option value="-1" disabled selected>Minutt</option>
-            <option *ngFor="let q of quarters" value="{{q}}">{{q}}</option>
-          </select>
-        </div>
-        <div class="c-l-6 p-l-10-0 fs-11">
-          <button [disabled]="!timeForm.valid" type="submit" class="btn-md btn-green rounded-5 w-100-p">Meld interesse
-          </button>
-        </div>
-      </div>
-    </form>
-  </div>
+  <time-suggestion (onFormSubmit)="createAppointment($event)"></time-suggestion>
 </div>
-
 
 <!-- Edit job -->
 <div *ngIf="show.edit" (click)="toggle('edit')"
@@ -173,5 +143,6 @@
 <!-- SMOOTH ALERT -->
 <smooth-alert [collapse]="show.alert"
               [options]="alertOptions"
+              [alertText]="alertText"
               (onButtonClick)="toggle('alert')">
 </smooth-alert>
