--- a/src/pages/front/jobs/jobs.component.html
+++ b/src/pages/front/jobs/jobs.component.html
@@ -59,7 +59,7 @@
               <div class="picture picture-lg m-l-20-20" [ngStyle]="{'background-image':'url(' + baseUrl + job.picture + ')'}"></div>
                 <div class="c-m-8">
                     <h3 class="t-300 m-l-0-0">{{ job.title }}</h3>
-                    <p class="big m-l-0-10">Lagt ut for 2 timer siden</p>
+                    <p class="big m-l-0-10">Lagt ut for {{timeSince(job.created_at)}} siden</p>
                     <div class="row p-l-20-0 p-top">
                         <div class="c-m-4 fs-14">
                             <div class="row row-center-v">
